# zenoytdl

./: .env  .recent-items-state.json  .recent-items-state.pending.filtered.json  .recent-items-state.pending.json  AGENTS.md  DOSSIER-TECNICO.md  EJEMPLOS.md  Makefile  PLANS.md  README-mudanza-ruta.txt  README.md  beets.music-playlist.yaml  bloque1-test.ps1  bloque2-test.ps1  config.generated.yaml  docker-compose.yml  generate-ytdl-config.py  hitos-and-test.md  prepare-subscriptions-runset.py  profiles-custom.yml  pyproject.toml  run-master-tests.ps1  salida-terminal.txt  subscription-custom.yml  subscriptions.generated.yaml  subscriptions.runset.filtered.yaml  subscriptions.runset.yaml  test-e2e-perfiles-subscriptions.ps1  test-zenoytdl.ps1  trim-ambience-video.py  validate-test-e2e-perfiles-subscriptions.ps1  zenoytdl-run.py  zenoytdl_config.py
config/: zenoytdl.yml
docs/: DOSSIER-TECNICO.md  EJEMPLOS.md  GUIA-USO.md  README-mudanza-ruta.txt  README.md  api-core-hito19.md  arquitectura-core.md  cola-y-cache.md  compilacion-hito11.md  container-runtime.md  contrato-yaml.md  contrato-ytdl-sub.md  criterios-de-prueba.md  ejecucion-hito12.md  esquema-sqlite.md  listado-comandos-python.txt  modelo-dominio-hito2.md  operacion-comandos.md  overrides-hito7.md  parseo-carga-hito4.md  postprocesados-hito8.md  resolucion-hito6.md  roadmap-hitos.md  traduccion-hito10.md  validacion-hito5.md  zenoytdl-diagrama-ascii.txt  zenoytdl-documento-funcional.txt
plans/: hito-00-preparacion-base.md  hito-03-contrato-yaml.md  hito-09-integracion-ytdl-sub.md  hito-18-colas-ejecucion.md  (+2 more)
(+318 files in other folders)
